--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "lodash": "^4.17.10",
+    "mongodb": "^3.1.0-beta4",
+    "mongoose": "^5.1.1",
+    "validator": "^10.2.0"
   }
 }
